2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincAnnotation.cs:
	* ZincAnnotations.cs:
	* ZincTypeInstExprAndIdent.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincVarDeclItem.cs:
	* ZincTypeInstAndIdent.cs:
	* ZincTypeInstExprAndIdent.cs:
	* ZincTypeInstExpressionIdent.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOutputItem.cs:
	* ZincAssignItem.cs:
	* ZincVarDeclItem.cs:
	* ZincConstraintItem.cs:
	* ZincTypeInstExpressionIdent.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincAnnotationItem.cs:
	* ZincTypeInstWhereExpression.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincIdentBox.cs:
	* ZincOutputItem.cs:
	* ZincAssignItem.cs:
	* ZincVarDeclItem.cs:
	* ZincIdentBoxBase.cs:
	* IZincExpressionBox.cs:
	* ZincAnnotationItem.cs:
	* ZincConstraintItem.cs:
	* IZincAnnotationsBox.cs:
	* ZincExpressionBoxBase.cs:
	* IZincIdentExpressionBox.cs:
	* IZincTypeInstAndIdentBox.cs:
	* IZincTypeInstExpressionBox.cs:
	* ZincIdentExpressionBoxBase.cs:
	* ZincTypeInstWhereExpression.cs:
	* ZincTypeInstExpressionIdent.cs:
	* ZincTypeInstExpressionBoxBase.cs:
	* IZincTypeInstExprAndIdentAnnotationsExpressionBox.cs:
	* ZincTypeInstExprAndIdentAnnotationsExpressionBoxBase.cs: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincModel.cs:
	* ZincScalarType.cs:
	* ZincVarDeclItem.cs:
	* IZincAnnotationsBox.cs:
	* IZincTypeInstExprAndIdentAnnotationsExpressionBox.cs:
	* ZincTypeInstExprAndIdentAnnotationsExpressionBoxBase.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxideMiniZincException.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincVarDeclItem.cs:
	* ZincAnnotations.cs:
	* ZincTypeInstExpressionBoxBase.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IZincIdentBox.cs:
	* ZincScalarType.cs:
	* ZincVarDeclItem.cs:
	* ZincTypeInstAndIdent.cs:
	* IZincTypeInstAndIdentBox.cs: